# advent_of_code

./: .gitignore  flake.nix
.direnv/: nix-profile-pre496992.e603dc5f061.rc
2015/day1/src/: main.rs
2015/day2/src/: main.rs
2015/day3/src/: main.rs
2015/day5/src/: main.rs
2016/day1/src/: main.rs
2022/day1/src/: main.rs
2022/day2/src/: main.rs
2022/day3/src/: main.rs
2022/day4/src/: main.rs
2023/day1/: Cargo.toml
2023/day1/src/: lib.rs  main.rs
2023/day2/: Cargo.toml
2023/day2/benches/: bench.rs
2023/day2/src/: lib.rs  main.rs
2023/day4/: Cargo.toml
2023/day4/benches/: bench.rs
2023/day4/src/: lib.rs  main.rs
2023/day6/: Cargo.toml
2023/day6/benches/: bench.rs
2023/day6/src/: lib.rs
templates/rust/: Cargo.toml
templates/rust/benches/: bench.rs
templates/rust/src/: lib.rs
