[package]
name = "day4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34.0", features = [ "full" ]}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
